syntax = "proto3";

enum VersionType {
  NONE = 0;
  SNORT = 1;
}